--- a/android/one/settings.gradle
+++ b/android/one/settings.gradle
@@ -10,7 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
-rootProject.name = "My Application"
+rootProject.name = "one"
 include ':app'
