--- a/android/one/app/src/main/AndroidManifest.xml
+++ b/android/one/app/src/main/AndroidManifest.xml
@@ -22,8 +22,14 @@
             </intent-filter>
         </activity>
         <provider
-            android:authorities="{app}"
-            android:name="androidx.core.content.FileProvider"/>
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="me.newtrekwang.android7.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
