--- a/android/one/app/build.gradle
+++ b/android/one/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.grod.one"
         minSdk 21
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -42,5 +42,6 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+    implementation("com.squareup.okhttp3:okhttp:4.9.3")
 
 }
