--- a/android/one/app/build.gradle
+++ b/android/one/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
 
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
 
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
