--- a/android/one/app/build.gradle
+++ b/android/one/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
 
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'com.github.caiyonglong:musicapi:1.1.4'
+
 }
