--- a/android/one/app/build.gradle
+++ b/android/one/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
 
     implementation 'com.github.caiyonglong:musicapi:1.1.4'
 
+//    implementation 'com.google.android.exoplayer:exoplayer:2.14.1'
+    implementation 'cn.jzvd:jiaozivideoplayer:7.7.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
